Expand the range of working patterns
Currently we only support 0.0, 0.2, 0.4, 0.6, 0.8 and 1.0. Our first
user went straight for 0.5.

This PR expands the options from 0.0->0.9 in 0.1 intervals, but 1.0
being handled by a separate radio button.  Selecting Full time will set
to 1.0, selecting Part time will give the option of choosing from 0 to
0.9

Unfortunately we have to jump through hoops because of the way we are
modelling POMs.  The main POM model is held in memory and we add a few
extra fields based from our local database.  The controller typically
works with the in-memory model when creating the details, but we need to
work with the subset of fields when persisting the data.  Our options
are:

* Re-write the controller to focus on working with the POMDetail model
  instead of the POM.
* Persist the POM details (name, pom_type etc) in our local database,
  and provide the ability to remove a POM from a given prison.

The latter, whilst putting more responsibility on the SPO to maintain
the list would reduce the number of API calls we would have to make and
should make a lot of the system simpler (as for instance, we can
reference allocations to a full model).

--- a/app/views/poms/edit.html.erb
+++ b/app/views/poms/edit.html.erb
@@ -6,35 +6,43 @@
     <h2 class="govuk-heading-l"><%= @pom.first_name.titleize %> <%= @pom.last_name.titleize %></h2>
 
     <div class='govuk-!-margin-top-6'>
-      <div class="govuk-form-group">
-        <fieldset class="govuk-fieldset" aria-describedby="-edit_pom-conditional-hint">
-          <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">
-            <h1 class="govuk-fieldset__heading">Working pattern</h1>
-          </legend>
+      <fieldset class="govuk-fieldset" aria-describedby="-edit_pom-conditional-hint">
+        <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">
+          <h1 class="govuk-fieldset__heading">Working pattern</h1>
+        </legend>
+        <div class="govuk-form-group <% if @errors[:working_pattern].present? %>govuk-form-group--error<% end %>">
+        <% if @errors[:working_pattern].present? %>
+          <span class="govuk-error-message">
+            <%= @errors[:working_pattern].first %>
+          </span>
+        <% end %>
+
           <div class="govuk-radios" data-module="radios">
-            <div class="govuk-radios__item">
-              <%= radio_button_tag("edit_pom[working_pattern]", "1.0", @pom.working_pattern == '1.0', id: "working_pattern-1", class: "govuk-radios__input") %>
-              <%= label_tag "edit_pom[working_pattern]", "Full time", class: "govuk-label govuk-radios__label" %>
-            </div>
-            <div class="govuk-radios__item">
-              <%= radio_button_tag("edit_pom[working_pattern]", "0.8", @pom.working_pattern == '0.8', id: "working_pattern-2", class: "govuk-radios__input") %>
-              <%= label_tag "edit_pom[working_pattern]", "Part time - 0.8", class: "govuk-label govuk-radios__label" %>
-            </div>
-            <div class="govuk-radios__item">
-              <%= radio_button_tag("edit_pom[working_pattern]", "0.6", @pom.working_pattern == '0.6', id: "working_pattern-3", class: "govuk-radios__input") %>
-              <%= label_tag "edit_pom[working_pattern]", "Part time - 0.6", class: "govuk-label govuk-radios__label" %>
-            </div>
-            <div class="govuk-radios__item">
-              <%= radio_button_tag("edit_pom[working_pattern]", "0.4", @pom.working_pattern == '0.4', id: "working_pattern-4", class: "govuk-radios__input") %>
-              <%= label_tag "edit_pom[working_pattern]", "Part time - 0.4", class: "govuk-label govuk-radios__label" %>
-            </div>
-            <div class="govuk-radios__item">
-              <%= radio_button_tag("edit_pom[working_pattern]", "0.2", @pom.working_pattern == '0.2', id: "working_pattern-5", class: "govuk-radios__input") %>
-              <%= label_tag "edit_pom[working_pattern]", "Part time - 0.2", class: "govuk-label govuk-radios__label" %>
+            <div class="govuk-form-group">
+              <div class="govuk-radios__item">
+                <%= radio_button_tag("edit_pom[description]", "FT", @pom.working_pattern == '1.0', id: "working_pattern-ft", class: "govuk-radios__input") %>
+                <%= label_tag "edit_pom[description]", "Full time", class: "govuk-label govuk-radios__label" %>
+              </div>
+              <div class="govuk-radios govuk-radios--conditional" data-module="radios">
+                <div class="govuk-radios__item">
+                  <input class="govuk-radios__input" id="part-time-conditional-1" name="edit_pom[description]" type="radio" value="PT" data-aria-controls="conditional-part-time-conditional-1" <%= 'checked="checked"' if @pom.working_pattern != '1.0'%>>
+                  <label class="govuk-label govuk-radios__label" for="part-time-conditional-1">
+                    Part time
+                  </label>
+                </div>
+                <div class="govuk-radios__conditional govuk-radios__conditional--hidden" id="conditional-part-time-conditional-1">
+                  <% 9.downto(1).each do |value| %>
+                    <div class="govuk-radios__item">
+                      <%= radio_button_tag("edit_pom[working_pattern]", "0.#{value}", @pom.working_pattern == "0.#{value}", id: "working_pattern-#{value}", class: "govuk-radios__input") %>
+                      <%= label_tag "edit_pom[working_pattern]", "Part time 0.#{value} - #{working_pattern_to_days(value)}", class: "govuk-label govuk-radios__label" %>
+                    </div>
+                  <% end %>
+                </div>
+              </div>
             </div>
           </div>
-        </fieldset>
-      </div>
+        </div>
+      </fieldset>
     </div>
 
     <div class='govuk-!-margin-top-6'>
