Clean up how we handle sentence details
This PR cleans up how we handle sentence details so that we don't have
to duplicate code between offender, offendersummary and sentencedetail
objects.

--- a/app/views/poms/_caseload.html.erb
+++ b/app/views/poms/_caseload.html.erb
@@ -15,7 +15,7 @@
     <tr class="govuk-table__row pom_cases_row_<%= i %>">
       <td aria-label="Prisoner name" class="govuk-table__cell "><%= sentence.full_name %></td>
       <td aria-label="Prisoner number" class="govuk-table__cell "><%= allocation.nomis_offender_id %></td>
-      <td aria-label="Earliest release date" class="govuk-table__cell "><%= sentence.earliest_release_date %></td>
+      <td aria-label="Earliest release date" class="govuk-table__cell "><%= format_date(sentence.earliest_release_date) %></td>
       <td aria-label="Tier" class="govuk-table__cell "><%= allocation.allocated_at_tier %></td>
       <td aria-label="Allocation date" class="govuk-table__cell "><%= format_date(allocation.created_at) %></td>
       <td aria-label="Role" class="govuk-table__cell "><%= allocation.responsibility %></td>
