--- a/app/views/summary/unallocated.html.erb
+++ b/app/views/summary/unallocated.html.erb
@@ -22,11 +22,23 @@
   <table class="govuk-table responsive tablesorter">
     <thead class="govuk-table__head">
     <tr class="govuk-table__row">
-      <th class="govuk-table__header" scope="col">Prisoner name</th>
+      <th class="govuk-table__header" scope="col">
+        <a href="<%= set_search_param('last_name') %>">
+          Prisoner name
+        </a>
+      </th>
       <th class="govuk-table__header sorter-false" scope="col">Prisoner number</th>
-      <th class="govuk-table__header sorter-false" xscope="col">Earliest release<br/>date</th>
+      <th class="govuk-table__header sorter-false" xscope="col">
+        <a href="<%= set_search_param('earliest_release_date') %>">
+          Earliest release<br/>date</th>
+        </a>
+      </th>
       <th class="govuk-table__header sorter-false" scope="col">Case owner</th>
-      <th class="govuk-table__header sorter-false" scope="col">Waiting</th>
+      <th class="govuk-table__header sorter-false" scope="col">
+        <a href="<%= set_search_param('awaiting_allocation_for') %>">
+          Waiting
+        </a>
+      </th>
       </th>
       <th class="govuk-table__header sorter-false" scope="col">Action</th>
     </tr>
