--- a/app/views/case_information/new.html.erb
+++ b/app/views/case_information/new.html.erb
@@ -6,7 +6,9 @@
 <% end %>
 
 <h1 class="govuk-heading-xl govuk-!-margin-top-4 govuk-!-margin-bottom-4">Case information</h1>
-<h2 class="govuk-heading-m"><%= @prisoner.full_name %> - <%= @prisoner.offender_no %></h2>
+<h2 class="govuk-!-margin-bottom-0 govuk-heading-m"><%= @prisoner.full_name %> (<%= format_date(@prisoner.date_of_birth) %>)</h2>
+<h2 class="govuk-heading-m"><%= @prisoner.offender_no %></h2>
+
 <p class="govuk-!-margin-bottom-8">You can find this information in NDelius.</p>
 
 
