--- a/app/views/shared/_basic_prisoner_info.html.erb
+++ b/app/views/shared/_basic_prisoner_info.html.erb
@@ -10,6 +10,10 @@
       <td class="govuk-table__cell table_cell__left_align govuk-!-width-one-half"><%= @prisoner.full_name %></td>
     </tr>
     <tr class="govuk-table__row">
+      <td class="govuk-table__cell govuk-!-width-one-half">Date of birth</td>
+      <td class="govuk-table__cell table_cell__left_align govuk-!-width-one-half"><%= format_date(@prisoner.date_of_birth) %></td>
+    </tr>
+    <tr class="govuk-table__row">
       <td class="govuk-table__cell hmpps-table-cell__key">Prisoner number</td>
       <td class="govuk-table__cell table_cell__left_align hmpps-table-cell__key"><%= @prisoner.offender_no %></td>
     </tr>
