--- a/app/views/summary/allocated.html.erb
+++ b/app/views/summary/allocated.html.erb
@@ -39,6 +39,9 @@
         <td aria-label="POM" class="govuk-table__cell"><%= offender.allocated_pom_name %></td>
         <td aria-label="Allocation date" class="govuk-table__cell"><%= format_date(offender.allocation_date) %></td>
         <td aria-label="Action" class="govuk-table__cell "><%= link_to "Reallocate", edit_allocations_path(offender.offender_no) %></td>
+        <!--
+          <td aria-label="Action" class="govuk-table__cell "><%= link_to "View", show_allocations_path(offender.offender_no) %></td>
+        -->
       </tr>
     <% end %>
     </tbody>
