--- a/app/assets/stylesheets/timeline.scss
+++ b/app/assets/stylesheets/timeline.scss
@@ -27,7 +27,7 @@ $govuk-heading-m: 1.2em;
       position: absolute;
       z-index: 2;
       left: -32px;
-      top: 25px;
+      top: 85px;
     }
   }
 
@@ -39,11 +39,11 @@ $govuk-heading-m: 1.2em;
     &:after {
       content: "";
       position: absolute;
-      top: 45px;
+      top: 94px; /* 94px if half the height of the LI which is about 188px */
+      margin-bottom: 94px;
       left: -3px;
       bottom: 0;
       border-left: 4px solid #6f777b;
-      height: 91%;
     }
 
     li {
