Fix the allocation routes to enable allocation info page
Rails routes doesn't like a resource specifying a path_name as
':nomis_offender_id' and so this PR changes it to a 'resources' where
the param name is explicitly changed.  It also needs to change the path
for new because in our use-case new required a nomis_offender_id.

--- a/app/views/allocations/_pom_tables.html.erb
+++ b/app/views/allocations/_pom_tables.html.erb
@@ -34,7 +34,7 @@ time left to serve into account.</p>
       <td aria-label="Total" class="govuk-table__cell "><%= pom.total_cases %></td>
       <td aria-label="Working pattern" class="govuk-table__cell"><%= working_pattern_name(pom.working_pattern) %></td>
       <td aria-label="Action" class="govuk-table__cell table_cell__left_align">
-      <%= link_to "Allocate", confirm_allocations_path(@prisoner.offender_no, pom.staff_id), class: "govuk-link" %>
+      <%= link_to "Allocate", confirm_allocation_path(@prisoner.offender_no, pom.staff_id), class: "govuk-link" %>
       </td>
     </tr>
   <% end %>
