--- a/app/views/shared/_allocation_info.html.erb
+++ b/app/views/shared/_allocation_info.html.erb
@@ -14,7 +14,7 @@
       <td class="govuk-table__cell table_cell__left_align govuk-!-width-one-half">
         <%= link_to @pom.full_name, pom_path(@pom.staff_id), class: "govuk-link" %>
 
-        <%= link_to 'Reallocate', edit_allocations_path(@prisoner.offender_no), class: "govuk-link pull-right" %>
+        <%= link_to 'Reallocate', edit_allocation_path(@prisoner.offender_no), class: "govuk-link pull-right" %>
       </td>
     </tr>
    <!--<tr class="govuk-table__row">-->
