--- a/app/views/summary/allocated.html.erb
+++ b/app/views/summary/allocated.html.erb
@@ -38,10 +38,10 @@
         </td>
         <td aria-label="POM" class="govuk-table__cell"><%= offender.allocated_pom_name %></td>
         <td aria-label="Allocation date" class="govuk-table__cell"><%= format_date(offender.allocation_date) %></td>
-        <td aria-label="Action" class="govuk-table__cell "><%= link_to "Reallocate", edit_allocations_path(offender.offender_no) %></td>
+        <td aria-label="Action" class="govuk-table__cell "><%= link_to "Reallocate", edit_allocation_path(offender.offender_no) %></td>
         <!--
           <td aria-label="Action" class="govuk-table__cell ">
-            <#%= link_to "View", allocations_path(nomis_offender_id: offender.offender_no) %>
+            <#%= link_to "View", allocation_path(nomis_offender_id: offender.offender_no) %>
           </td>
         -->
       </tr>
