Change the allocation list to reduce RAM usage
Instead of building up a separate list of lists, this PR consumes the
allocation list as it processes. At the end of processing the
AllocationList will be empty.

--- a/app/views/shared/_allocation_history.html.erb
+++ b/app/views/shared/_allocation_history.html.erb
@@ -1,5 +1,5 @@
 
-<% @history.grouped_by_prison.each do |row| %>
+<% @history.grouped_by_prison!.each do |row| %>
 
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
