Simplify the grouping by requiring a block
Returns the prison and it's allocations to a provided block rather than
as a list.

--- a/app/views/shared/_allocation_history.html.erb
+++ b/app/views/shared/_allocation_history.html.erb
@@ -1,12 +1,12 @@
 
-<% @history.grouped_by_prison!.each do |row| %>
+<% @history.grouped_by_prison do |prison, allocations| %>
 
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
     <div class="timeline">
-      <h2 class="govuk-heading-m"><%= prison_title(row.first) %></h2>
+      <h2 class="govuk-heading-m"><%= prison_title(prison) %></h2>
       <ul>
-        <% row.last.each do |allocation| %>
+        <% allocations.each do |allocation| %>
         <li class="action_needed">
           <h2 class="govuk-heading-s">Prisoner allocation</h2>
           <p>Prisoner allocated to
