--- a/app/views/shared/_allocation_history.html.erb
+++ b/app/views/shared/_allocation_history.html.erb
@@ -1,23 +1,23 @@
 <% @history.grouped_by_prison do |prison, allocations| %>
-
-<div class="govuk-grid-row">
-  <div class="govuk-grid-column-two-thirds">
-    <div class="timeline">
-      <h2 class="govuk-heading-m"><%= prison_title(prison) %></h2>
-      <ul>
-        <% allocations.each do |allocation| %>
-        <li class="action_needed">
-          <h2 class="govuk-heading-s">Prisoner allocation</h2>
-          <p>Prisoner allocated to
-            <%= link_to( allocation.pom_name.titlecase, pom_path(allocation.nomis_staff_id) ) %>
-            <br/>
-            Tier: <%= allocation.allocated_at_tier %>
-          </p>
-          <p class="time"><%= format_date_long(allocation.created_at) %> by <%= allocation.created_by_name.titlecase %></p>
-        </li>
-      <% end %>
-      </ul>
+  <div class="govuk-grid-row">
+    <div class="govuk-grid-column-two-thirds">
+      <div class="timeline">
+        <h2 class="govuk-heading-m"><%= prison_title(prison) %></h2>
+        <ul>
+          <% allocations.each do |allocation| %>
+            <li class="action_needed">
+              <h2 class="govuk-heading-s">Prisoner allocation</h2>
+              <p>Prisoner allocated to
+                <%= link_to(allocation.primary_pom_name.titlecase, pom_path(allocation.primary_pom_nomis_id)) %>
+                <br/>
+                Tier: <%= allocation.allocated_at_tier %>
+              </p>
+              <p class="time"><%= format_date_long(allocation.created_at) %>
+                by <%= allocation.created_by_name.titlecase %></p>
+            </li>
+          <% end %>
+        </ul>
+      </div>
     </div>
   </div>
-</div>
 <% end %>
