--- a/app/views/shared/_basic_prisoner_info.html.erb
+++ b/app/views/shared/_basic_prisoner_info.html.erb
@@ -17,8 +17,7 @@
       <td class="govuk-table__cell">Prisoner number</td>
       <td class="govuk-table__cell table_cell__left_align">
         <%= @prisoner.offender_no %>
-        <a class="govuk-link pull-right" href="<%= Rails.configuration.new_nomis_host %>/offenders/<%= @prisoner.offender_no%>/quick-look" target="_blank">View NOMIS profile</a>
-      </td>
+        <%= link_to 'View NOMIS profile', new_nomis_profile_path(@prisoner.offender_no), class: "govuk-link pull-right", target: "_blank" %>
     </tr>
     </tbody>
   </table>
