Show an unavailable POMs label on the allocation page
When allocating, or re-allocating an offender to a POM, we should show
the number of unavailable POMs.  We link here to the list of POMs as
they may be 'unavailable' or 'inactive'.

--- a/app/views/allocations/_pom_tables.html.erb
+++ b/app/views/allocations/_pom_tables.html.erb
@@ -91,3 +91,16 @@ time left to serve into account.</p>
     </table>
   </div>
 </details>
+
+<% if @unavailable_pom_count > 0 %>
+  <p>
+    There
+    <% if @unavailable_pom_count == 1 %>
+      is <%= @unavailable_pom_count %> POM unavailable for new allocations.
+      <a href="<%= poms_path %>">See POM</a>
+    <% else %>
+      are <%= @unavailable_pom_count %> POMs unavailable for new allocations.
+      <a href="<%= poms_path %>">See all POMs</a>
+    <% end%>
+  </p>
+<% end %>
