--- a/app/views/poms/_prison_poms_table.html.erb
+++ b/app/views/poms/_prison_poms_table.html.erb
@@ -21,7 +21,7 @@
       <td aria-label="Tier C cases" class="govuk-table__cell "><%= pom.tier_c %></td>
       <td aria-label="Tier D cases" class="govuk-table__cell "><%= pom.tier_d %></td>
       <td aria-label="Total" class="govuk-table__cell "><%= pom.total_cases %></td>
-      <td aria-label="Working pattern" class="govuk-table__cell"><%= pom.working_pattern %></td>
+      <td aria-label="Working pattern" class="govuk-table__cell"><%= format_working_pattern(pom.working_pattern) %></td>
       <td aria-label="Status" class="govuk-table__cell "><%= pom.status.capitalize %></td>
       <td aria-label="Action" class="govuk-table__cell "><%= link_to 'View', pom_path(nomis_staff_id: pom.staff_id) %></td>
     </tr>
